<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/fragment_btn"
                android:layout_width="@dimen/activity_button_width"
                android:layout_height="wrap_content"
                android:text="@string/activity_fragment"/>
            <Button
                android:id="@+id/event_btn"
                android:layout_width="@dimen/activity_button_width"
                android:layout_height="wrap_content"
                android:text="@string/activity_event"/>
            <Button
                android:id="@+id/okhttp_btn"
                android:layout_width="@dimen/activity_button_width"
                android:layout_height="wrap_content"
                android:text="@string/activity_okhttp"/>
            <Button
                android:id="@+id/multi_threading_helper_btn"
                android:layout_width="@dimen/activity_button_width"
                android:layout_height="wrap_content"
                android:text="@string/activity_multi_threading_helper"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>