<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.axdefault.fragments.AxFourthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fourth Fragment" />

        <EditText
            android:id="@+id/ax_fourth_editor_1"
            android:layout_width="@dimen/activity_button_width"
            android:layout_height="wrap_content"
            android:hint="param_1"/>

        <EditText
            android:id="@+id/ax_fourth_editor_2"
            android:layout_width="@dimen/activity_button_width"
            android:layout_height="wrap_content"
            android:hint="param_2"/>

        <Button
            android:id="@+id/ax_fourth_to_first"
            android:layout_width="@dimen/activity_button_width"
            android:layout_height="wrap_content"
            android:text="@string/fragment_goto_first"/>

        <Button
            android:id="@+id/ax_fourth_to_second"
            android:layout_width="@dimen/activity_button_width"
            android:layout_height="wrap_content"
            android:text="@string/fragment_goto_second"/>

        <Button
            android:id="@+id/ax_fourth_to_third"
            android:layout_width="@dimen/activity_button_width"
            android:layout_height="wrap_content"
            android:text="@string/fragment_goto_third"/>
    </LinearLayout>

</FrameLayout>