<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.axdefault.fragments.AxFirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="First Fragment" />

        <EditText
            android:id="@+id/ax_first_editor_1"
            android:layout_width="@dimen/activity_button_width"
            android:layout_height="wrap_content"
            android:hint="param_1"/>

        <EditText
            android:id="@+id/ax_first_editor_2"
            android:layout_width="@dimen/activity_button_width"
            android:layout_height="wrap_content"
            android:hint="param_2"/>

        <Button
            android:id="@+id/ax_first_to_second"
            android:layout_width="@dimen/activity_button_width"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="@dimen/activity_button_text_size"
            android:text="@string/fragment_goto_second"/>

        <Button
            android:id="@+id/ax_first_to_third"
            android:layout_width="@dimen/activity_button_width"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="@dimen/activity_button_text_size"
            android:text="@string/fragment_goto_third"/>

        <Button
            android:id="@+id/ax_first_to_fourth"
            android:layout_width="@dimen/activity_button_width"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="@dimen/activity_button_text_size"
            android:text="@string/fragment_goto_fourth"/>
    </LinearLayout>

</FrameLayout>